# AltairEgo

./: .emscripten  .gitattributes  .gitignore  LICENSE  Makefile.am  README.md  a.wasm  altair_ego.html  autogen.sh  build-em++  configure.ac  shell.html
SDK/: embuilder  emnm
spa/: 3dplot.html  amazing.html  awari.html  calendar.html  depth_charge.html  loader.html  mastermind.html  superstartrek.html
spa/opt/: README  optimize  wasm.optimized
src/: Makefile.am  functions.cpp  functions.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  variable.cpp  variable.h
tests/: README.md  run_all_tests.sh
tests/cases/: debug_test.bas  same_line_for.bas  simple_input_test.bas  simple_test.bas  test.bas  test_alignment.bas  test_arrays.bas  test_asc_val.bas  test_complex_loop_jumps.bas  test_depth_charge_pattern.bas  test_edge_cases.bas  test_exact_pattern.bas  test_gosub_for.bas  test_gosub_for_debug.bas  test_gosub_from_for.bas  test_gosub_in_for.bas  test_goto_into_for.bas  test_goto_out_of_for.bas  test_if.bas  test_input_fix.bas  test_io.bas  test_len.bas  test_len_comprehensive.bas  test_len_error.bas  test_loops.bas  test_math.bas  test_mid_function.bas  test_minimal.bas  test_multiline_for.bas  test_number_format.bas  test_same_line_comprehensive.bas  test_string_array_comprehensive.bas  test_string_arrays.bas  test_suite.bas  test_whitespace_lexing.bas
tests/expected/: debug_test.bas.expected  same_line_for.bas.expected  simple_input_test.bas.expected  simple_test.bas.expected  test.bas.expected  test_alignment.bas.expected  test_arrays.bas.expected  test_asc_val.bas.expected  test_complex_loop_jumps.bas.expected  test_depth_charge_pattern.bas.expected  test_edge_cases.bas.expected  test_exact_pattern.bas.expected  test_gosub_for.bas.expected  test_gosub_for_debug.bas.expected  test_gosub_from_for.bas.expected  test_gosub_in_for.bas.expected  test_goto_into_for.bas.expected  test_goto_out_of_for.bas.expected  test_if.bas.expected  test_input_fix.bas.expected  test_io.bas.expected  test_len.bas.expected  test_len_comprehensive.bas.expected  test_len_error.bas.expected  test_loops.bas.expected  test_math.bas.expected  test_mid_function.bas.expected  test_minimal.bas.expected  test_multiline_for.bas.expected  test_number_format.bas.expected  test_string_arrays.bas.expected  (+4 more)
(+8 files in other folders)
